--- a/.github/workflows/main_joni-week5-auth.yml
+++ b/.github/workflows/main_joni-week5-auth.yml
@@ -29,8 +29,8 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          npm -rf test
-          npm -rf src
+          rm -rf test
+          rm -rf src
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
